--- a/src/app/admin/features/nav/nav.component.scss
+++ b/src/app/admin/features/nav/nav.component.scss
@@ -225,8 +225,8 @@
 .version span {
     font-size: 1.2em;
     font-weight: 600;
-    // color: #2d584e
-    color: var(--primary-color);
+    color: #2d584e
+    // color: var(--primary-color);
 }
 
 @media screen and (max-width: 1200px) {
