--- a/src/app/admin/features/operator/operator-details/operator-details.component.scss
+++ b/src/app/admin/features/operator/operator-details/operator-details.component.scss
@@ -94,9 +94,9 @@ p {
     margin: 5px 0;
 }
 
-.text .last {
-    text-transform: lowercase;
-}
+// .text .last {
+//     text-transform: lowercase;
+// }
 
 .label {
     margin-right: 0px;
