--- a/src/app/admin/features/operator_Login/operatordashboard/operatordashboard.component.html
+++ b/src/app/admin/features/operator_Login/operatordashboard/operatordashboard.component.html
@@ -65,7 +65,7 @@
         </div>
 
         <div class="col-6 col-lg-1-7 ">
-            <div class="card box d-flex flex-column justify-content-between p-3">
+            <div class="card box d-flex flex-column justify-content-between p-3" (click)="openLCO_Dialog(1)">
                 <div class="d-flex justify-content-between w-100">
                     <i class='bx bxs-lock'></i>
                     <span class="fw-bold">{{operatorDetailsCount?.suspendcount}}</span>
