--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,10 +2,14 @@
     <div class="login-wrap d-flex justify-content-center align-items-center">
         <div class="login-html">
             <div class="d-flex justify-content-center align-item-center">
-                <img *ngIf="msoLogo" [src]="msoLogo" alt="MSO Logo"
-                    style="width: 150px; height: auto;display:flex;margin: auto;">
+                <!-- ------------------NORMAL------------- -->
                 <!-- <img *ngIf="msoLogo" [src]="msoLogo" alt="MSO Logo"
-                    style="width: 100px; height: auto;display:flex;margin: auto;"> -->
+                    style="width: 150px; height: auto;display:flex;margin: auto;"> -->
+
+
+                    <!-- -----------------------4K--------------- -->
+                <img *ngIf="msoLogo" [src]="msoLogo" alt="MSO Logo"
+                    style="width: 100px; height: auto;display:flex;margin: auto;">
             </div>
             <div class="d-block justify-content-center align-items-center mb-3">
                 <h2 style="text-transform:capitalize;color:#256462">RSMS</h2>
