--- a/src/app/admin/features/channel_setting/_Dialogue/Addon_package/addon-view/addon-view.component.scss
+++ b/src/app/admin/features/channel_setting/_Dialogue/Addon_package/addon-view/addon-view.component.scss
@@ -13,10 +13,10 @@
     padding: 0.5rem;
 }
 
-.mobile {
-    max-height: 500px;
-    overflow: scroll;
-}
+// .mobile {
+//     max-height: 500px;
+//     overflow: scroll;
+// }
 .view {
 
     box-shadow: 1px 2px 0 0 #989494, -2px 3px 0 0 #ae9e9e, 2px 3px 0px 0 #cbcbcb;
