--- a/src/app/admin/features/channel_setting/addon-package/addon-package.component.html
+++ b/src/app/admin/features/channel_setting/addon-package/addon-package.component.html
@@ -4,7 +4,7 @@
     <div class="row">
         <div class="col-xl-12 col-sm-12 col-12">
             <div class="col d-flex justify-content-center align-items-center mb-3">
-                <a class="btn btn-outline-primary mx-1  " (click)="addnew()">
+                <a class="btn btn-outline-success mx-1  " (click)="addnew()">
                     <span>+</span> New
                 </a>
                 <div class="export-icon" (click)="generatePdf(0,'all')">
