--- a/src/app/admin/features/nav/nav.component.html
+++ b/src/app/admin/features/nav/nav.component.html
@@ -13,14 +13,15 @@
             <!-- <img *ngIf="msoLogo" [src]="msoLogo" alt="MSO Logo"
                 style="width: 100px; height: auto;display:flex;margin: auto 40px;"> -->
 
-                <!-- ----------------4K--------- -->
+            <!-- ----------------4K--------- -->
             <img *ngIf="msoLogo" [src]="msoLogo" alt="MSO Logo"
                 style="width: 54px; height: auto;display:flex;margin: auto 60px;">
 
             <!-- ----------------------Normal--------------- -->
             <h5 class="brand-text mb-1" style="margin: 5px 30px;color: var(--primary-color);"
                 [ngStyle]="{'visibility': !isSidebarlogo ? 'visible' : 'hidden'}"> {{msoName}} </h5>
-            <p class="brand-text" style="margin: 0px 30px;color: var(--primary-color);;text-align: center;font-size: 13px;"
+            <p class="brand-text"
+                style="margin: 0px 30px;color: var(--primary-color);;text-align: center;font-size: 13px;"
                 [ngStyle]="{'visibility': !isSidebarlogo ? 'visible' : 'hidden'}"> V-7.2.2 </p>
             <!-- -----------------------------r-digital----------- -->
             <!-- <h5 class="brand-text mb-1" style="margin: 5px 30px;color: #525151"
@@ -225,6 +226,14 @@
                         Creation</a> </li>
             </ul>
         </li>
+
+
+
+        
+
+
+
+
         <li class="mb-3" *ngIf="isUser || isReception ">
             <a>
                 <!-- <mat-icon class="icon">assessment</mat-icon> -->
@@ -371,7 +380,18 @@
                             class="fa fa-fw fa-comments  icon ">&nbsp;</i> Addon</a></li>
             </ul>
         </li>
-
+        <li *ngIf="isOperator ">
+            <a> <mat-icon class="icon">control_camera</mat-icon>VC/STB Master <i
+                    class='bx bx-chevron-right icon-right'></i></a>
+            <ul class="side-dropdown">
+                <li><a (click)="navgetToUrl('/chipid');setActiveLinkTab($event)"><i class="fa-regular fa-newspaper icon"
+                            style="margin-right: 0px;"></i>Chip ID and Model
+                    </a>
+                </li>
+                <li><a (click)="navgetToUrl('/stb_bill');setActiveLinkTab($event)"><i class="fa fa-fw fa-recycle icon "
+                            style="margin-right: 0px;"></i>Smartcard Change</a> </li>
+            </ul>
+        </li>
         <li *ngIf="isOperator"><a (click)="navgetToUrl('/Recurring');setActiveLinkTab($event)" class="nav-link"><i
                     class="fa-regular fa-registered  bx-sm icon">&nbsp;</i>Recurring</a>
         </li>
