--- a/src/app/admin/features/cas_operaion/force-tuning/force-tuning.component.html
+++ b/src/app/admin/features/cas_operaion/force-tuning/force-tuning.component.html
@@ -1,7 +1,7 @@
 <div class="display justify-content-center align-item-center">
     <div class="col-12 col-md-6 p-3">
         <div class="card">
-            <div class="title">
+            <div class="title1">
                 <p>Force Tuning </p>
             </div>
             <div class=" d-flex justify-content-center align-item-center">
