--- a/src/app/admin/features/operator_Login/operatordashboard/operatordashboard.component.html
+++ b/src/app/admin/features/operator_Login/operatordashboard/operatordashboard.component.html
@@ -129,15 +129,23 @@
         </div>
     </div>
 </div>
+
 <div class="row" style="padding: 10px;">
     <div class="col-12 col-md-7 display justify-content-center align-item-center balance gap-3">
         <div class="col-12 col-lg-4 mb-3 ">
-            <div class="card box d-flex flex-column justify-content-between p-3" (click)="addnew()">
+            <div *ngIf="walletshare" class="card box d-flex flex-column justify-content-between p-3"
+                (click)="addnew()">
                 <div class="d-flex justify-content-around">
                     <div class="mt-2 mb-3 text-center text1">Current Balance</div>
                     <i class="fa-solid fa-share forward mt-2 mb-3"></i>
                 </div>
-                <!-- <div class="mt-2 mb-3 text-center text1">Current Balance</div> -->
+                <div class="d-flex justify-content-center align-item-center ">
+                    <i class="fa-solid fa-indian-rupee-sign rupee mx-2"></i>
+                    <h5>{{operatorBalance}} </h5>
+                </div>
+            </div>
+            <div *ngIf="!walletshare" class="card box d-flex flex-column justify-content-between p-3">
+                <div class="mt-2 mb-3 text-center text1">Current Balance</div>
                 <div class="d-flex justify-content-center align-item-center ">
                     <i class="fa-solid fa-indian-rupee-sign rupee mx-2"></i>
                     <h5>{{operatorBalance}} </h5>
