--- a/src/app/admin/features/operator_Login/onlinerecharge/onlinerecharge.component.scss
+++ b/src/app/admin/features/operator_Login/onlinerecharge/onlinerecharge.component.scss
@@ -63,7 +63,8 @@
 }
 
 .pay-btn {
-    background-color: #2476fa;
+    // background-color: #2476fa;
+    background-color: #e1965f;
     border-radius: 25px;
     color: white;
     border: none;
